--- a/Home/news_3_3_0/css/news_3_3_0.css
+++ b/Home/news_3_3_0/css/news_3_3_0.css
@@ -48,11 +48,14 @@
     .news_3_3_0__boxLeft__picBig img {
       width: 100%; }
   .news_3_3_0__boxRight {
-    width: 48%; }
+    width: 48%;
+    margin: 10 auto; }
     @media (max-width: 820px) {
       .news_3_3_0__boxRight {
         width: 100%;
-        margin-top: 20px; } }
+        margin-top: 20px;
+        display: flex;
+        flex-wrap: wrap; } }
   .news_3_3_0__smallItem {
     display: flex;
     margin-bottom: 10px; }
@@ -93,7 +96,8 @@
         margin-right: 5px; } }
   @media (max-width: 350px) {
     .news_3_3_0__smallItem {
-      flex-wrap: wrap; }
+      width: 40%;
+      margin-left: 10px; }
       .news_3_3_0__smallItem__pic {
         width: 100%; }
       .news_3_3_0__smallItem__detail p {
