--- a/Home/news_3_3_0/sass/news_3_3_0.scss
+++ b/Home/news_3_3_0/sass/news_3_3_0.scss
@@ -1,18 +1,18 @@
 
 
 %font1 {
-    font-family:  Helvetica , Arial, sans-serif;
+    font-family: Helvetica;
 }
 
 $color1:#004689;
 
 %icon {
-    font-family:  Helvetica , Arial, sans-serif;
+    font-family: Helvetica;
     font-style: normal;
     font-weight: 400;
-    speak: none;
     display: inline-block;
     text-decoration: inherit;
+    color: white;
     width: 1em;
     margin-right: .2em;
     text-align: center;
@@ -94,10 +94,14 @@ $color1:#004689;
 
     &__boxRight {
         width: 48%;
+        margin: 10 auto;
         @media (max-width: 820px) {
             width: 100%;
             margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
         }
+
     }
 
     &__smallItem {
@@ -158,7 +162,8 @@ $color1:#004689;
     }
     @media (max-width: 350px) {
         &__smallItem{
-            flex-wrap: wrap;
+            width: 40%;
+            margin-left: 10px;
             &__pic{
                 width: 100%;
             }
