--- a/Home/doctor_3_1_0/scss/style.css
+++ b/Home/doctor_3_1_0/scss/style.css
@@ -1,7 +1,8 @@
 .doctor_3_1_0 {
   background-image: url(../media/slide_bg.jpg);
   background-size: 100%;
-  color: white; }
+  color: white;
+  font-family: Arial, Helvetica, sans-serif; }
   .doctor_3_1_0__container {
     width: 70%;
     margin: 0px auto;
