--- a/Home/doctor_3_1_0/scss/style.scss
+++ b/Home/doctor_3_1_0/scss/style.scss
@@ -2,7 +2,7 @@
     background-image: url(../media/slide_bg.jpg);
     background-size: 100%;
     color: white;
-
+    font-family: Arial, Helvetica, sans-serif;
     &__container {
         width: 70%;
         margin: 0px auto;
