--- a/Home/news_3_3_0/sass/news_3_3_0.scss
+++ b/Home/news_3_3_0/sass/news_3_3_0.scss
@@ -1,10 +1,8 @@
-
-
 %font1 {
     font-family: Helvetica;
 }
 
-$color1:#004689;
+$color1: #004689;
 
 %icon {
     font-family: Helvetica;
@@ -14,26 +12,26 @@ $color1:#004689;
     text-decoration: inherit;
     color: white;
     width: 1em;
-    margin-right: .2em;
+    margin-right: 0.2em;
     text-align: center;
     font-variant: normal;
     text-transform: none;
     line-height: 1em;
-    margin-left: .2em;
+    margin-left: 0.2em;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .news_3_3_0 {
     padding: 30px 0;
     background-color: rgb(241, 241, 241);
-    .container{
+    font-family: Arial, Helvetica, sans-serif;
+    .container {
         width: 80%;
         margin: 0 auto;
-        
     }
     &__title {
-        h2{
+        h2 {
             font-size: 30px;
             font-weight: 700;
         }
@@ -55,9 +53,9 @@ $color1:#004689;
         }
         &__detail {
             padding: 5px 20px;
-            color: #0329FF;
+            color: #0329ff;
             background-color: white;
-            h3{
+            h3 {
                 font-size: 20px;
                 font-weight: 700;
                 text-transform: uppercase;
@@ -74,14 +72,14 @@ $color1:#004689;
             padding: 2px 8px 2px 21px;
             position: relative;
             top: -10px;
-            &::before{
-                content: '';
-                background: url('../images/date.jpg')center 0 no-repeat;
+            &::before {
+                content: "";
+                background: url("../images/date.jpg") center 0 no-repeat;
                 background-size: 100%;
                 width: 18px;
                 height: 18px;
                 left: 0;
-                position: absolute ;
+                position: absolute;
             }
         }
 
@@ -101,7 +99,6 @@ $color1:#004689;
             display: flex;
             flex-wrap: wrap;
         }
-
     }
 
     &__smallItem {
@@ -110,7 +107,7 @@ $color1:#004689;
         &__detail {
             padding: 0px 0px 0px 15px;
             flex: 1;
-            color: #0329FF;
+            color: #0329ff;
             background-color: white;
         }
 
@@ -127,21 +124,21 @@ $color1:#004689;
             font-size: 14px;
             padding: 0px 8px 0px 21px;
             position: relative;
-            &::before{
-                content: '';
-                background: url('../images/date.jpg')center 0 no-repeat;
+            &::before {
+                content: "";
+                background: url("../images/date.jpg") center 0 no-repeat;
                 background-size: 100%;
                 width: 18px;
                 height: 18px;
                 left: 0;
-                position: absolute ;
+                position: absolute;
             }
         }
     }
 
     &__detail {
         padding: 5px 0px;
-        color: #0329FF;
+        color: #0329ff;
 
         p {
             color: #000;
@@ -160,19 +157,18 @@ $color1:#004689;
             }
         }
     }
-    @media (max-width: 350px) {
-        &__smallItem{
+    @media (max-width: 600px) {
+        &__smallItem {
             width: 40%;
             margin-left: 10px;
-            &__pic{
+            &__pic {
                 width: 100%;
             }
-            &__detail{
-                p{
+            &__detail {
+                p {
                     margin-right: 5px;
                 }
             }
         }
     }
-    
 }
