--- a/Home/basis_3_1_0/css/style.css
+++ b/Home/basis_3_1_0/css/style.css
@@ -35,6 +35,6 @@
     .basis_3_1_0__group {
       flex-direction: column-reverse; }
       .basis_3_1_0__group .basis_3_1_0__title {
-        margin: 380px 0; } }
+        margin-bottom: 308px; } }
 
 /*# sourceMappingURL=style.css.map */
