--- a/Home/basis_3_1_0/scss/style.scss
+++ b/Home/basis_3_1_0/scss/style.scss
@@ -47,7 +47,7 @@
         &__group{
             flex-direction: column-reverse;
             .basis_3_1_0__title{
-                margin: 380px 0 ;
+                margin-bottom: 308px ;
             }
         }
 
