--- a/themes/home/Post/post_4_0_0/sass/post_4_0_0.scss
+++ b/themes/home/Post/post_4_0_0/sass/post_4_0_0.scss
@@ -124,6 +124,7 @@
     @media (max-width:514px) {
         &-btn {
             max-width: 200px;
+            text-align: center;
             display: block;
             margin: 20px auto 0;
             background-color: #dc721c;
