--- a/themes/home/Post/post_4_0_0/sass/post_4_0_0.scss
+++ b/themes/home/Post/post_4_0_0/sass/post_4_0_0.scss
@@ -111,6 +111,17 @@
     }
 }
 
+.post_4_0_0_slogans {
+    margin-top: 40px;
+    img {
+        display: block;
+        margin: 0 auto 20px;
+    }
+    p {
+        font-size: 16px;
+    }
+}
+
 .post_4_0_0_intro {
     margin-top: 40px;
     &-img {
