--- a/themes/home/Header/header_20_0_0/sass/header_20_0_0.scss
+++ b/themes/home/Header/header_20_0_0/sass/header_20_0_0.scss
@@ -363,6 +363,11 @@ a {
             }
         }
     }
+    @media (max-width: 320px) {
+        &__task {
+            display: none;
+        }
+    }
 }
 
 @media (max-width:1180px) {
