--- a/themes/kangnam/Header/header_20_0_0/sass/header_20_0_0.scss
+++ b/themes/kangnam/Header/header_20_0_0/sass/header_20_0_0.scss
@@ -105,7 +105,6 @@ a {
                             display: block;
                             animation: opac 0.4s;
                         }
-                        &>a {}
                     }
                     &Box {
                         display: none;
@@ -305,6 +304,28 @@ a {
             }
         }
     }
+    .menuSubDown {
+        position: relative;
+    }
+    &__menuSubDown {
+        display: none;
+        position: absolute;
+        width: 200px;
+        background-color: #0b365b;
+    }
+    &__dropDownItem {
+        padding: 10px 15px;
+        color: #fff;
+        display: block;
+        font-size: 16px;
+        font-weight: 600;
+    }
+    &__dropDownItem:hover {
+        color: #F26649;
+    }
+    .menuSubDown:hover .header_20_0_0__menuSubDown {
+        display: block;
+    }
     .modal {
         .modal-title {
             font-size: 20px;
@@ -380,6 +401,14 @@ a {
             position: absolute;
             right: 0;
             top: 10px;
+        }
+        &__menuSubDown {
+            position: unset;
+            width: 100%;
+            background-color: #fff;
+        }
+        &__dropDownItem {
+            color: #035aa4;
         }
         &__box {
             height: 60px;
