--- a/themes/kangnam/Popup/tool_info_1_2_1/css/tool_info_1_2_1.css
+++ b/themes/kangnam/Popup/tool_info_1_2_1/css/tool_info_1_2_1.css
@@ -77,7 +77,7 @@
         background: #ff8212
     }
     
-    @media (max-width: 540px) {
+    @media (max-width: 600px) {
         .tool_info_1_2_1 {
             width: 100%;
             bottom: 0;
@@ -90,7 +90,8 @@
             flex-direction: row;
         }
         .tool_info_1_2_1__item {
-            width: 25%;
+            padding: 0;
+            width: 34%;
         }
     }
     
