--- a/themes/kangnam/Post/post_4_3_0/sass/post_4_3_0.scss
+++ b/themes/kangnam/Post/post_4_3_0/sass/post_4_3_0.scss
@@ -49,6 +49,11 @@
             width: 100%;
         }
     }
+    &__table {
+        a {
+            display: none;
+        }
+    }
     @media (max-width:540px) {
         &__header {
             font-size: 24px;
@@ -73,6 +78,16 @@
         img {
             width: 100%;
             margin: 0 auto
+        }
+        &__table {
+            a {
+                display: block;
+                font-weight: 600;
+                color: #1264ba;
+            }
+            img {
+                display: none;
+            }
         }
     }
 }
