--- a/themes/kangnam/Home/doctor_10_0_0/sass/doctor_10_0_0.scss
+++ b/themes/kangnam/Home/doctor_10_0_0/sass/doctor_10_0_0.scss
@@ -4,10 +4,23 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: center;
+    }
+    &__logo {
+        width: 35%;
+        img {
+            display: block;
+            width: 100%;
+        }
+    }
+    &__wrapper {
+        display: flex;
+        flex-wrap: wrap;
         gap: 20px;
+        width: 60%;
     }
     &__item {
-        width: 31%;
+        width: 48%;
         position: relative;
         img {
             display: block;
@@ -26,31 +39,40 @@
             bottom: 0;
         }
     }
-    @media(max-width:912px) {
+    @media(max-width:991px) {
         &__item {
+            width: 42%;
             span {
                 font-size: 16px;
                 padding: 20px 0;
             }
         }
     }
-    @media(max-width:540px) {
+    @media(max-width:600px) {
         &__box {
             gap: 10px;
+            flex-direction: column;
+        }
+        &__logo {
+            width: 50%;
+        }
+        &__wrapper {
+            width: 100%;
         }
         &__item {
             width: 47%;
             span {
-                font-size: 14px;
+                font-size: 12px;
                 padding: 10px 0;
             }
         }
     }
-    @media(max-width:540px) {
+    @media(max-width:280px) {
+        &__logo {
+            width: 100%;
+        }
         &__item {
-            span {
-                font-size: 12px;
-            }
+            width: 100%;
         }
     }
 }
