--- a/pop_regpr_1_0_0/sass/app.scss
+++ b/pop_regpr_1_0_0/sass/app.scss
@@ -157,6 +157,14 @@
         font-weight: 600;
         font-style: italic;
         text-align: center;
+        .icon{
+            &__call{
+                width: 22px;
+                height: 22px;
+                display: inline-block;
+                vertical-align: middle;
+            }
+        }
         a {
             background: #ea3b41;
             color: #fff;
