--- a/pop_regpr_1_0_0/css/app.css
+++ b/pop_regpr_1_0_0/css/app.css
@@ -121,6 +121,11 @@
   font-weight: 600;
   font-style: italic;
   text-align: center; }
+  .pop_callpr_1_0_0__contact .icon__call {
+    width: 22px;
+    height: 22px;
+    display: inline-block;
+    vertical-align: middle; }
   .pop_callpr_1_0_0__contact a {
     background: #ea3b41;
     color: #fff;
