--- a/pop_regpr_1_0_0/sass/app.scss
+++ b/pop_regpr_1_0_0/sass/app.scss
@@ -72,7 +72,8 @@
         color: #696969;
         font-size: 13px;
         p {
-            margin: 6px 0 12px;
+            margin: 0px;
+            padding: 0px;
             font-style: italic;
         }
         a {
@@ -89,6 +90,22 @@
         .modal-header {
             padding: 0;
             border-bottom: unset;
+            .pop_callpr_1_0_0__des1 {
+                padding: 5px 0 10px;
+                color: #666;
+                font-weight: 700;
+                font-style: italic;
+                font-size: 14px;
+                @media (max-width: 280px) {
+                    font-size: 13px;
+                }
+                p {
+                    margin: 0;
+                }
+                @media (min-width: 1280px) {
+                    display: none;
+                }
+            }
         }
         .modal-title {
             text-align: center;
@@ -112,6 +129,11 @@
         }
         .modal-body {
             padding: 0px 20px;
+        }
+        .pop_callpr_1_0_0__contact {
+            @media (min-width: 1280px) {
+                display: none;
+            }
         }
     }
     &__des {
@@ -157,8 +179,8 @@
         font-weight: 600;
         font-style: italic;
         text-align: center;
-        .icon{
-            &__call{
+        .icon {
+            &__call {
                 width: 22px;
                 height: 22px;
                 display: inline-block;
