--- a/Footer/footer_pr_1_0_0/sass/footer_pr_1_0_0.scss
+++ b/Footer/footer_pr_1_0_0/sass/footer_pr_1_0_0.scss
@@ -10,14 +10,14 @@ body {
     display: inline-block;
     text-decoration: inherit;
     width: 1em;
-    margin-right: .2em;
+    margin-right: 0.2em;
     text-align: center;
     font-variant: normal;
     text-transform: none;
     line-height: 1em;
-    margin-left: .2em;
+    margin-left: 0.2em;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
+    -moz-osx-font-smoothing: grayscale;
 }
 
 %font1 {
@@ -97,34 +97,32 @@ body {
     }
 }
 
-.refuse {
-    position: fixed;
-    bottom: 0;
-    background: #0042A4;
-    color: #fff;
-    font-style: italic;
-    width: 100%;
-    padding: 5px 10px;
-    z-index: 5;
-    @media (max-width: 912px) {
-        position: inherit;
-        text-align: center;
-        padding: 10px 0;
-        z-index: 0;
-        margin-bottom: 25px;
-        font-size: 15px;
-    }
-}
-
-.footer_2_1_0 {
-    background-color: #0157a4;
+.footer_1_0_0 {
+    background: url("../images/bg.jpg") 0 no-repeat;
     padding: 40px 0 45px;
-    &__box2 {
+    &__refuse {
+        position: fixed;
+        bottom: 0;
+        background: #0042a4;
+        color: #fff;
+        font-style: italic;
+        width: 100%;
+        padding: 5px 10px;
+        z-index: 5;
+        @media (max-width: 912px) {
+            position: inherit;
+            text-align: center;
+            padding: 10px 0;
+            z-index: 0;
+            font-size: 15px;
+        }
+    }
+    &__infor {
         width: 70%;
         b {
-            color: #67C5EA;
+            color: #67c5ea;
         }
-        &-title {
+        &__title {
             color: #fff;
             text-align: left;
             h3 {
@@ -139,18 +137,18 @@ body {
                 width: 100%;
             }
         }
-        &__ct {
+        &__contact {
             padding-right: 20px;
         }
         &__item {
             display: flex;
             &.item1 {
-                border-bottom: 1px solid #4F6C90;
+                border-bottom: 1px solid #4f6c90;
                 margin-bottom: 10px;
                 justify-content: space-between;
             }
         }
-        &-Social {
+        &__Social {
             width: 80%;
             text-align: right;
             padding: 15px 0;
@@ -158,7 +156,7 @@ body {
             display: flex;
             align-items: center;
             .boxtop__call-2 {
-                background-color: #FF706F;
+                background-color: #ff706f;
                 border-radius: 10px;
                 color: #fff;
                 text-align: center;
@@ -174,7 +172,7 @@ body {
                 }
             }
         }
-        &__DoiTac {
+        &__partner {
             ul {
                 list-style: none;
                 padding: 0;
@@ -192,31 +190,30 @@ body {
             }
         }
     }
-    &__box {
+    .container {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
     }
-    &__box1 {
+    &__Logo {
         width: 18%;
-        &-logo {
-            text-align: center;
-            padding-top: 90px;
-            img {
-                width: 100%;
-            }
+        text-align: center;
+        padding-top: 90px;
+        img {
+            margin-top: 10px;
+            width: 100%;
         }
     }
     @media (max-width: 1180px) {
         padding: 20px 0 35px;
-        &__box2 {
-            &-Social {
+        &__infor {
+            &__Social {
                 text-align: left;
                 margin-top: 0px;
                 width: 90%;
                 padding: 15px 15px 15px 0;
             }
-            &__DoiTac {
+            &__partner {
                 padding-top: 0px;
                 ul {
                     width: 90%;
@@ -225,45 +222,43 @@ body {
         }
     }
     @media (max-width: 912px) {
-        padding: 0 0 35px;
+        padding: 0 0 28px;
         &__box {
-            justify-content: center
+            justify-content: center;
         }
-        &__box1 {
-            &-logo {
-                padding-top: 0px;
-            }
+        &__Logo {
+            padding-top: 0px;
         }
-        &__box2 {
+        &__infor {
             width: 100%;
         }
     }
     @media (max-width: 540px) {
         padding: 0px 0 70px;
-        background: #014FA2;
-        &__box1 {
+        background: #014fa2;
+        &__Logo {
             width: 100%;
         }
-        &__box2 {
+        &__infor {
             &__item {
                 display: block;
             }
-            &-title {
+            &__title {
                 text-align: center;
                 h3 {
-                    font-size: 18px;
+                    font-size: 16px;
                 }
             }
             &__pic {
                 display: none;
             }
-            &__ct {
+            &__contact {
                 padding-right: 0;
             }
             &__protect {
                 padding-top: 0;
             }
-            &-Social {
+            &__Social {
                 justify-content: center;
                 width: 100%;
                 padding: 0 0 8px;
@@ -274,7 +269,7 @@ body {
                     }
                 }
             }
-            &__DoiTac {
+            &__partner {
                 padding-left: 0px;
                 ul {
                     width: 100%;
@@ -296,17 +291,15 @@ body {
         &__box {
             padding-left: 0px;
         }
-        &__box1 {
-            &-logo {
-                width: 40%;
-                text-align: left;
-                margin: 0 auto;
-            }
+        &__Logo {
+            width: 40%;
+            text-align: left;
+            margin: 0 auto;
         }
     }
     @media (max-width: 375px) {
-        &__box2 {
-            &-title {
+        &__infor {
+            &__title {
                 h3 {
                     margin-top: 10px;
                     font-size: 15px;
@@ -315,14 +308,14 @@ body {
         }
     }
     @media (max-width: 320px) {
-        &__box2 {
-            &-title {
+        &__infor {
+            &__title {
                 h3 {
                     font-size: 19px;
                     margin-top: 5px;
                 }
             }
-            &-Social {
+            &__Social {
                 .boxtop__call-2 {
                     font-size: 13px;
                 }
